@@ -5,11 +5,11 @@ Deploying Presto
 Installing Presto
 -----------------
 
-Download the Presto server tarball, :download:`server`, and unpack it.
+Download the Presto server tarball, :maven_download:`server`, and unpack it.
 The tarball will contain a single top-level directory,
 |presto_server_release|, which we will call the *installation* directory.
 
-Presto needs a *data* directory for storing logs, local metadata, etc.
+Presto needs a *data* directory for storing logs, etc.
 We recommend creating a data directory outside of the installation directory,
 which allows it to be easily preserved when upgrading Presto.
 
@@ -66,8 +66,7 @@ The JVM config file, ``etc/jvm.config``, contains a list of command line
 options used for launching the Java Virtual Machine. The format of the file
 is a list of options, one per line. These options are not interpreted by
 the shell, so options containing spaces or other special characters should
-not be quoted (as demonstrated by the ``OnOutOfMemoryError`` option in the
-example below).
+not be quoted.
 
 The following provides a good starting point for creating ``etc/jvm.config``:
 
@@ -75,37 +74,17 @@ The following provides a good starting point for creating ``etc/jvm.config``:
 
     -server
     -Xmx16G
-    -XX:+UseConcMarkSweepGC
+    -XX:+UseG1GC
+    -XX:G1HeapRegionSize=32M
+    -XX:+UseGCOverheadLimit
     -XX:+ExplicitGCInvokesConcurrent
-    -XX:+CMSClassUnloadingEnabled
-    -XX:+AggressiveOpts
     -XX:+HeapDumpOnOutOfMemoryError
-    -XX:OnOutOfMemoryError=kill -9 %p
-    -XX:PermSize=150M
-    -XX:MaxPermSize=150M
-    -XX:ReservedCodeCacheSize=150M
-    -Xbootclasspath/p:/var/presto/installation/lib/floatingdecimal-0.1.jar
+    -XX:+ExitOnOutOfMemoryError
 
 Because an ``OutOfMemoryError`` will typically leave the JVM in an
 inconsistent state, we write a heap dump (for debugging) and forcibly
 terminate the process when this occurs.
 
-Presto compiles queries to bytecode at runtime and thus produces many classes,
-so we increase the permanent generation size (the garbage collector region
-where classes are stored) and enable class unloading.
-
-The last option in the above configuration loads the
-`floatingdecimal <https://github.com/airlift/floatingdecimal>`_
-patch for the JDK that substantially improves performance when parsing
-floating point numbers. This is important because many Hive file formats
-store floating point values as text. Change the path
-``/var/presto/installation`` to match the Presto installation directory.
-
-.. note::
-
-    When using Java 8, remove the ``-XX:PermSize``, ``-XX:MaxPermSize`` and
-    ``-Xbootclasspath`` options. The ``PermSize`` options are not supported
-    and the floatingdecimal patch is only for Java 7.
 
 .. _config_properties:
 
@@ -125,7 +104,8 @@ The following is a minimal configuration for the coordinator:
     coordinator=true
     node-scheduler.include-coordinator=false
     http-server.http.port=8080
-    task.max-memory=1GB
+    query.max-memory=50GB
+    query.max-memory-per-node=1GB
     discovery-server.enabled=true
     discovery.uri=http://example.net:8080
 
@@ -135,7 +115,8 @@ And this is a minimal configuration for the workers:
 
     coordinator=false
     http-server.http.port=8080
-    task.max-memory=1GB
+    query.max-memory=50GB
+    query.max-memory-per-node=1GB
     discovery.uri=http://example.net:8080
 
 Alternatively, if you are setting up a single machine for testing that
@@ -146,7 +127,8 @@ will function as both a coordinator and worker, use this configuration:
     coordinator=true
     node-scheduler.include-coordinator=true
     http-server.http.port=8080
-    task.max-memory=1GB
+    query.max-memory=5GB
+    query.max-memory-per-node=1GB
     discovery-server.enabled=true
     discovery.uri=http://example.net:8080
 
@@ -167,16 +149,11 @@ These properties require some explanation:
   Specifies the port for the HTTP server. Presto uses HTTP for all
   communication, internal and external.
 
-* ``task.max-memory=1GB``:
-  The maximum amount of memory used by a single task
-  (a fragment of a query plan running on a specific node).
-  In particular, this limits the number of groups in a ``GROUP BY``,
-  the size of the right-hand table in a ``JOIN``, the number of rows
-  in an ``ORDER BY`` or the number of rows processed by a window function.
-  This value should be tuned based on the number of concurrent queries and
-  the size and complexity of queries.  Setting it too low will limit the
-  queries that can be run, while setting it too high will cause the JVM
-  to run out of memory.
+* ``query.max-memory``:
+  The maximum amount of distributed memory that a query may use.
+
+* ``query.max-memory-per-node``:
+  The maximum amount of memory that a query may use on any one machine.
 
 * ``discovery-server.enabled``:
   Presto uses the Discovery service to find all the nodes in the cluster.
@@ -192,6 +169,17 @@ These properties require some explanation:
   URI of the Presto coordinator. Replace ``example.net:8080`` to match
   the host and port of the Presto coordinator. This URI must not end
   in a slash.
+
+You may also wish to set the following properties:
+
+* ``jmx.rmiregistry.port``:
+  Specifies the port for the JMX RMI registry. JMX clients should connect to this port.
+
+* ``jmx.rmiserver.port``:
+  Specifies the port for the JMX RMI server. Presto exports many metrics
+  that are useful for monitoring via JMX.
+
+See also :doc:`/admin/resource-groups`.
 
 Log Levels
 ^^^^^^^^^^
@@ -239,7 +227,7 @@ Running Presto
 --------------
 
 The installation directory contains the launcher script in ``bin/launcher``.
-Presto can be started as a daemon by running running the following:
+Presto can be started as a daemon by running the following:
 
 .. code-block:: none
 
